found a way to no longer have flickering on the screen caused by removing and adding the stylesheets

--- a/test.css
+++ b/test.css
@@ -1,3 +1,4 @@
 body {
-  background:white;
+  background:grey;
+  color:#FFF;
 }
